Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.4.0 Beta
-
Fix Version/s: 5.4.1
-
Component/s: GUI: Text handling
-
Labels:
-
Environment:Windows RT 8.1
-
Platform/s:
-
Commits:c170ea57ca5a927b22726a730a7eedd274abbcfc
Description
Text rendering is broken; the glyphs are rendered as filled boxes.
Sample output from the console:
QOpenGLShader::link: "Could not pack varying sampleCoord " QSGMaterialShader: Shader compilation failed: "Could not pack varying sampleCoord " QOpenGLShader::link: "Could not pack varying sampleCoord " QOpenGLShaderProgram::uniformLocation( matrix ): shader program is not linked QOpenGLShaderProgram::uniformLocation( textureScale ): shader program is not linked QOpenGLShaderProgram::uniformLocation( color ): shader program is not linked QOpenGLShaderProgram::uniformLocation( alphaMin ): shader program is not linked QOpenGLShaderProgram::uniformLocation( alphaMax ): shader program is not linked QOpenGLShaderProgram::uniformLocation( fontScale ): shader program is not linked QOpenGLShaderProgram::uniformLocation( vecDelta ): shader program is not linked